# analytics-api

./: Dockerfile  compose.yml  deploy.bat  pyproject.toml  requirements.txt
nbs/: hello-world.ipynb
src/: main.py
src/api/events/: routing.py
src/docker/: Dockerfile
src/docker/kernels/richKernel/: install.sh  requirement.txt
src/docker/kernels/test/: install.sh  requirement.txt
